<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="878dp"
        android:layout_height="459dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="339dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F4C04C"
                android:gravity="center"
                android:text="@string/saludo"
                android:textAlignment="center"
                android:textSize="40dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/donut" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F4C04C"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    android:layout_width="220dp"
                    android:layout_gravity="center"
                    android:layout_height="5dp"
                    android:layout_weight="1"
                    android:onClick="visataWeb"
                    android:text="VISITANOS!!"
                    android:textSize="20dp"

                    />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:paddingBottom="20dp"
                    android:text="@string/texto_configura"
                    android:textSize="20dp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#F2F1F1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/eligeSabor"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"


                    android:hint="@string/texto_elige" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_marginTop="50dp"
                    android:onClick="close"
                    android:text="Salir sin pedir" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Que incluya:" />

                <CheckBox
                    android:id="@+id/lacasito"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/lacasito"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <CheckBox
                    android:id="@+id/pepitaChocolate"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/pepita" />

                <CheckBox
                    android:id="@+id/nata"

                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/nata" />

                <CheckBox
                    android:id="@+id/crema"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/crema" />

                <CheckBox
                    android:id="@+id/kitkat"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/kitkat" />

                <CheckBox
                    android:id="@+id/nubes"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:text="@string/nubes" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F2F1F1"
                    android:onClick="PasaPagina"
                    app:srcCompat="@drawable/a_donut_cook" />

                <TextView
                    android:id="@+id/mensajePreparado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>